cache API responses using Redis