@@ -3,7 +3,7 @@ package bot.infrastructure;
 import bot.api.ApiCaller;
 import bot.api.ApiResponse;
 import bot.api.CodeforcesAPI;
-import bot.cache.RedisUtil;
+import bot.cache.RedisCache;
 import bot.domain.contest.Contest;
 import bot.domain.contest.Problem;
 import bot.domain.contest.ProblemSetResult;
@@ -18,18 +18,22 @@ import org.jetbrains.annotations.NotNull;
 
 import java.awt.*;
 import java.io.IOException;
-import java.io.Serializable;
 import java.lang.reflect.Type;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Random;
 
+import static bot.util.EmbedBuilderUtil.buildStandingEmbed;
+
+
 public class CodeforcesAPIImpl implements CodeforcesAPI {
     private static final String BASE_URL = "https://codeforces.com/api/";
     private static final Gson gson = new Gson();
     private final ApiCaller apiCaller;
-    private final RedisUtil redisUtil = new RedisUtil();
+    private static final int CACHE_EXPIRATION_SECONDS_PROBLEMS = 60 * 60 * 24 * 7; // 1 week
+    private static final int CACHE_EXPIRATION_SECONDS_USER_INFO = 60 * 60 * 24; // 1 day
+    private static final int CACHE_EXPIRATION_SECONDS_CONTESTS = 60 * 60 * 24; // 1 day
 
     public CodeforcesAPIImpl(ApiCaller apiCaller) {
         this.apiCaller = apiCaller;
@@ -37,36 +41,46 @@ public class CodeforcesAPIImpl implements CodeforcesAPI {
 
     @Override
     public EmbedBuilder getUserInfo(String handle) throws IOException {
-        String cacheKey = "user_info:" + handle;
+        String cacheKey = "user_info_" + handle;
+        String cachedResponse = RedisCache.get(cacheKey);
 
-        // Check Redis Cache
-        UserInfo cachedUserInfo = redisUtil.getObjectFromRedis(cacheKey, UserInfo.class);
-        if (cachedUserInfo != null) {
-            return buildUserInfoEmbed(cachedUserInfo);
+        if (cachedResponse != null) {
+            Type responseType = new TypeToken<ApiResponse<List<UserInfo>>>() {
+            }.getType();
+            ApiResponse<List<UserInfo>> apiResponse = gson.fromJson(cachedResponse, responseType);
+            return buildUserInfoEmbed(apiResponse.getResult().getFirst());
         }
 
-        // If not cached, fetch from the API
-        String url = BASE_URL + "user.info?handles=" + handle;
+        String url = BASE_URL + "user.info" + "?handles=" + handle;
         String jsonResponse = apiCaller.makeApiCall(url);
-        Type responseType = new TypeToken<ApiResponse<List<UserInfo>>>() {}.getType();
+        RedisCache.setWithExpiration(cacheKey, jsonResponse, CACHE_EXPIRATION_SECONDS_USER_INFO);
+
+        Type responseType = new TypeToken<ApiResponse<List<UserInfo>>>() {
+        }.getType();
         ApiResponse<List<UserInfo>> apiResponse = gson.fromJson(jsonResponse, responseType);
-
         if ("OK".equals(apiResponse.getStatus()) && apiResponse.getResult() != null && !apiResponse.getResult().isEmpty()) {
-            UserInfo userInfo = apiResponse.getResult().get(0);
-
-            // Cache the result
-            redisUtil.storeObjectInRedis(cacheKey, userInfo);
-
-            return buildUserInfoEmbed(userInfo);
+            return buildUserInfoEmbed(apiResponse.getResult().getFirst());
         } else {
             throw new IOException("Failed to retrieve user info");
         }
     }
 
-    // Changed from private to public to ensure it is accessible from other classes
-    public List<Contest> getContests(String url) throws IOException {
+    private List<Contest> getContests(String url) throws IOException {
+        String cacheKey = "contests_" + url.hashCode();
+        String cachedResponse = RedisCache.get(cacheKey);
+
+        if (cachedResponse != null) {
+            Type responseType = new TypeToken<ApiResponse<List<Contest>>>() {
+            }.getType();
+            ApiResponse<List<Contest>> apiResponse = gson.fromJson(cachedResponse, responseType);
+            return apiResponse.getResult();
+        }
+
         String jsonResponse = apiCaller.makeApiCall(url);
-        Type responseType = new TypeToken<ApiResponse<List<Contest>>>() {}.getType();
+        RedisCache.setWithExpiration(cacheKey, jsonResponse, CACHE_EXPIRATION_SECONDS_CONTESTS);
+
+        Type responseType = new TypeToken<ApiResponse<List<Contest>>>() {
+        }.getType();
         ApiResponse<List<Contest>> apiResponse = gson.fromJson(jsonResponse, responseType);
 
         if ("OK".equals(apiResponse.getStatus()) && apiResponse.getResult() != null) {
@@ -78,37 +92,20 @@ public class CodeforcesAPIImpl implements CodeforcesAPI {
 
     @Override
     public EmbedBuilder getUpcomingContests() throws IOException {
-        String cacheKey = "upcoming_contests";
-
-        // Check Redis Cache
-        List<Contest> cachedContests = redisUtil.getObjectFromRedis(cacheKey, List.class);
-        if (cachedContests != null) {
-            return buildContestsEmbed(cachedContests, "Upcoming Contests", Color.ORANGE, "BEFORE");
-        }
-
-        // Fetch from the API if not cached
-        String url = BASE_URL + "contest.list?gym=false";
+        String url = BASE_URL + "contest.list" + "?gym=false";
         List<Contest> contests = getContests(url);
 
-        // Cache the result
-        redisUtil.storeObjectInRedis(cacheKey, contests);
-
-        return buildContestsEmbed(contests, "Upcoming Contests", Color.ORANGE, "BEFORE");
-    }
-
-    // Changed from private to public to ensure it is accessible from other classes
-    public EmbedBuilder buildContestsEmbed(List<Contest> contests, String title, Color color, String phaseFilter) {
         EmbedBuilder embed = new EmbedBuilder();
-        embed.setTitle(title);
-        embed.setColor(color);
+        embed.setTitle("Upcoming Contests");
+        embed.setColor(Color.ORANGE);
 
         int count = 0;
         for (Contest contest : contests) {
-            if (contest.getPhase().equals(phaseFilter)) {
+            if (contest.getPhase().equals("BEFORE")) {
                 String name = contest.getName();
                 String contestId = String.valueOf(contest.getId());
                 String startTime = new java.text.SimpleDateFormat("dd/MM/yyyy HH:mm:ss").format(new java.util.Date(contest.getStartTimeSeconds() * 1000));
-                String duration = contest.getDurationSeconds() / 3600 + " hours";
+                String duration = String.valueOf(contest.getDurationSeconds() / 3600) + " hours";
 
                 long relativeTimeSeconds = contest.getRelativeTimeSeconds();
                 String relativeTime;
@@ -120,9 +117,52 @@ public class CodeforcesAPIImpl implements CodeforcesAPI {
                     long minutes = (absTimeSeconds % 3600) / 60;
                     relativeTime = String.format("Before start %d days %d hours %d minutes", days, hours, minutes);
                 } else {
-                    relativeTime = relativeTimeSeconds / 3600 + " hours";
+                    relativeTime = String.valueOf(relativeTimeSeconds / 3600) + " hours";
                 }
+                // add the id after the name
+                embed.addField(name + " (ID: " + contestId + ")", "Start Time: " + startTime + "\nDuration: " + duration + "\n" + relativeTime, false);
+                count++;
 
+                if (count == 5) {
+                    break;
+                }
+            } else {
+                break;
+            }
+
+        }
+        return embed;
+    }
+
+    // Return last 5 finished contests
+    @Override
+    public EmbedBuilder getFinishedContests() throws IOException {
+        String url = BASE_URL + "contest.list" + "?gym=false";
+        List<Contest> contests = getContests(url);
+
+        EmbedBuilder embed = new EmbedBuilder();
+        embed.setTitle("Finished Contests");
+        embed.setColor(Color.GREEN);
+
+        int count = 0;
+        for (Contest contest : contests) {
+            if (contest.getPhase().equals("FINISHED")) {
+                String name = contest.getName();
+                String contestId = String.valueOf(contest.getId());
+                String startTime = new java.text.SimpleDateFormat("dd/MM/yyyy HH:mm:ss").format(new java.util.Date(contest.getStartTimeSeconds() * 1000));
+                String duration = String.valueOf(contest.getDurationSeconds() / 3600) + " hours";
+
+                long relativeTimeSeconds = contest.getRelativeTimeSeconds();
+                String relativeTime;
+
+                // Relative time should be like : "Finished 2 days ago" or "Finished 2 hours ago" or "Finished 2 minutes ago"
+                long absTimeSeconds = Math.abs(relativeTimeSeconds);
+                long days = absTimeSeconds / (24 * 3600);
+                long hours = (absTimeSeconds % (24 * 3600)) / 3600;
+                long minutes = (absTimeSeconds % 3600) / 60;
+                relativeTime = String.format("Finished %d days %d hours %d minutes ago", days, hours, minutes);
+
+                // add the id after the name
                 embed.addField(name + " (ID: " + contestId + ")", "Start Time: " + startTime + "\nDuration: " + duration + "\n" + relativeTime, false);
                 count++;
 
@@ -132,26 +172,6 @@ public class CodeforcesAPIImpl implements CodeforcesAPI {
             }
         }
         return embed;
-    }
-
-    @Override
-    public EmbedBuilder getFinishedContests() throws IOException {
-        String cacheKey = "finished_contests";
-
-        // Check Redis Cache
-        List<Contest> cachedContests = redisUtil.getObjectFromRedis(cacheKey, List.class);
-        if (cachedContests != null) {
-            return buildContestsEmbed(cachedContests, "Finished Contests", Color.GREEN, "FINISHED");
-        }
-
-        // Fetch from the API if not cached
-        String url = BASE_URL + "contest.list?gym=false";
-        List<Contest> contests = getContests(url);
-
-        // Cache the result
-        redisUtil.storeObjectInRedis(cacheKey, contests);
-
-        return buildContestsEmbed(contests, "Finished Contests", Color.GREEN, "FINISHED");
     }
 
     private EmbedBuilder buildUserInfoEmbed(UserInfo userInfo) {
@@ -185,52 +205,26 @@ public class CodeforcesAPIImpl implements CodeforcesAPI {
 
     @Override
     public EmbedBuilder getStandingContestForUser(String handle, int contestId) throws IOException {
+        String cacheKey = "standing_" + handle + "_" + contestId;
+        String cachedResponse = RedisCache.get(cacheKey);
+
+        if (cachedResponse != null) {
+            Type responseType = new TypeToken<ApiResponse<StandingsResponse>>() {
+            }.getType();
+            ApiResponse<StandingsResponse> apiResponse = gson.fromJson(cachedResponse, responseType);
+            return buildStandingEmbed(apiResponse.getResult(), handle, contestId);
+        }
+
         String url = BASE_URL + "contest.standings?contestId=" + contestId + "&asManager=false&handles=" + handle;
         String jsonResponse = apiCaller.makeApiCall(url);
+        RedisCache.setWithExpiration(cacheKey, jsonResponse, CACHE_EXPIRATION_SECONDS_CONTESTS);
 
-        Type responseType = new TypeToken<ApiResponse<StandingsResponse>>() {}.getType();
+        Type responseType = new TypeToken<ApiResponse<StandingsResponse>>() {
+        }.getType();
         ApiResponse<StandingsResponse> apiResponse = gson.fromJson(jsonResponse, responseType);
 
         if ("OK".equals(apiResponse.getStatus()) && apiResponse.getResult() != null && !apiResponse.getResult().getRows().isEmpty()) {
-            StandingsResponse.StandingsRow userStanding = apiResponse.getResult().getRows().getFirst();
-
-            String contestName = apiResponse.getResult().getContest().getName();
-            String contestStartTime = new java.text.SimpleDateFormat("dd/MM/yyyy HH:mm:ss")
-                    .format(new java.util.Date(apiResponse.getResult().getContest().getStartTimeSeconds() * 1000));
-
-            EmbedBuilder embed = new EmbedBuilder();
-            embed.setTitle("`" + handle + "`" + "'s Standing in Contest");
-            embed.setColor(Color.CYAN);
-
-            String contestUrl = "https://codeforces.com/contest/" + contestId;
-            String contestFieldTitle = "Contest";
-            String contestFieldValue = String.format("[%s](%s) (ID: %s)", contestName, contestUrl, contestId);
-            embed.addField(contestFieldTitle, contestFieldValue, false);
-
-            embed.addField("Start Time", contestStartTime, false);
-            embed.addField("Rank", String.valueOf(userStanding.getRank()), false);
-            embed.addField("Solved", userStanding.getProblemResults().stream().filter(pr -> pr.getPoints() > 0).count() + "/" + userStanding.getProblemResults().size(), false);
-
-            List<Problem> problems = apiResponse.getResult().getProblems();
-            int problemCount = 0;
-
-            for (StandingsResponse.ProblemResult problemResult : userStanding.getProblemResults()) {
-                Problem problem = problems.get(problemCount++);
-
-                String problemName = problem.getName();
-                String problemLink = "https://codeforces.com/contest/" + contestId + "/problem/" + problem.getIndex();
-                String problemRating = problem.getRating() > 0 ? "Rating: " + problem.getRating() : "Unrated";
-                String problemStatus = problemResult.getPoints() > 0 ? "Solved" : "Unsolved";
-                String problemDetails = problemStatus + " (" + problemResult.getRejectedAttemptCount() + " wrong attempts)";
-                if (problemResult.getPoints() > 0) {
-                    problemDetails += "\nSolved after: " + problemResult.getBestSubmissionTimeSeconds() / 60 + " minutes";
-                }
-
-                String fieldValue = String.format("[%s](%s) (%s)\n%s\n%s", problemName, problemLink, problem.getIndex(), problemRating, problemDetails);
-                embed.addField("Problem", fieldValue, false);
-            }
-
-            return embed;
+            return buildStandingEmbed(apiResponse.getResult(), handle, contestId);
         } else {
             throw new IOException("Failed to retrieve user standings");
         }
@@ -238,27 +232,24 @@ public class CodeforcesAPIImpl implements CodeforcesAPI {
 
     @Override
     public List<Rating> getRatingHistory(String handle) throws IOException {
-        String cacheKey = "rating_history:" + handle;
+        String cacheKey = "rating_history_" + handle;
+        String cachedResponse = RedisCache.get(cacheKey);
 
-        // Check Redis Cache
-        List<Rating> cachedRatings = redisUtil.getObjectFromRedis(cacheKey, List.class);
-        if (cachedRatings != null) {
-            return cachedRatings;
+        if (cachedResponse != null) {
+            Type responseType = new TypeToken<ApiResponse<List<Rating>>>() {}.getType();
+            ApiResponse<List<Rating>> apiResponse = gson.fromJson(cachedResponse, responseType);
+            return apiResponse.getResult();
         }
 
-        // Fetch from the API if not cached
-        String url = BASE_URL + "user.rating?handle=" + handle;
+        String url = BASE_URL + "user.rating" + "?handle=" + handle;
         String jsonResponse = apiCaller.makeApiCall(url);
+        RedisCache.setWithExpiration(cacheKey, jsonResponse, CACHE_EXPIRATION_SECONDS_USER_INFO);
+
         Type responseType = new TypeToken<ApiResponse<List<Rating>>>() {}.getType();
         ApiResponse<List<Rating>> apiResponse = gson.fromJson(jsonResponse, responseType);
 
         if ("OK".equals(apiResponse.getStatus()) && apiResponse.getResult() != null) {
-            List<Rating> ratings = apiResponse.getResult();
-
-            // Cache the result
-            redisUtil.storeObjectInRedis(cacheKey, ratings);
-
-            return ratings;
+            return apiResponse.getResult();
         } else {
             throw new IOException("Failed to retrieve rating history");
         }
@@ -266,28 +257,42 @@ public class CodeforcesAPIImpl implements CodeforcesAPI {
 
     @Override
     public EmbedBuilder getRandomProblem(@NotNull List<String> tagsList, int rateStart, int rateEnd) throws IOException {
+        String cacheKey = "problem_set_" + String.join("_", tagsList) + "_" + rateStart + "_" + rateEnd;
+        String cachedResponse = RedisCache.get(cacheKey);
+
+        if (cachedResponse != null) {
+            Type responseType = new TypeToken<ApiResponse<ProblemSetResult>>() {}.getType();
+            ApiResponse<ProblemSetResult> apiResponse = gson.fromJson(cachedResponse, responseType);
+            return getRandomProblemFromResult(apiResponse.getResult(), rateStart, rateEnd);
+        }
+
         String url = BASE_URL + "problemset.problems";
         if (!tagsList.isEmpty()) {
             url += "?tags=" + String.join(";", tagsList);
         }
         String jsonResponse = apiCaller.makeApiCall(url);
+        RedisCache.setWithExpiration(cacheKey, jsonResponse, CACHE_EXPIRATION_SECONDS_PROBLEMS);
 
         Type responseType = new TypeToken<ApiResponse<ProblemSetResult>>() {}.getType();
         ApiResponse<ProblemSetResult> apiResponse = gson.fromJson(jsonResponse, responseType);
 
         if ("OK".equals(apiResponse.getStatus()) && apiResponse.getResult() != null) {
-            List<Problem> problems = apiResponse.getResult().getProblems();
-            List<Problem> filteredProblems = problems.stream()
-                    .filter(problem -> problem.getRating() >= rateStart && problem.getRating() <= rateEnd)
-                    .toList();
-            if (filteredProblems.isEmpty()) {
-                throw new IOException("No problem found in the given rating range");
-            }
-            Random random = new Random();
-            Problem randomProblem = filteredProblems.get(random.nextInt(filteredProblems.size()));
-            return EmbedBuilderUtil.buildRandomProblemEmbed(randomProblem);
+            return getRandomProblemFromResult(apiResponse.getResult(), rateStart, rateEnd);
         } else {
             throw new IOException("Failed to retrieve random problem");
         }
+    }
+
+    private EmbedBuilder getRandomProblemFromResult(ProblemSetResult result, int rateStart, int rateEnd) throws IOException {
+        List<Problem> problems = result.getProblems();
+        List<Problem> filteredProblems = problems.stream()
+                .filter(problem -> problem.getRating() >= rateStart && problem.getRating() <= rateEnd)
+                .toList();
+        if (filteredProblems.isEmpty()) {
+            throw new IOException("No problem found in the given rating range");
+        }
+        Random random = new Random();
+        Problem randomProblem = filteredProblems.get(random.nextInt(filteredProblems.size()));
+        return EmbedBuilderUtil.buildRandomProblemEmbed(randomProblem);
     }
 }
